# django-simple-stripe

./: .env-example  .gitignore  README.md  manage.py  pyproject.toml
addresses/: admin.py  models.py
addresses/migrations/: 0001_initial.py  0002_alter_address_options_alter_addresslines_options.py
checkouts/: apps.py  models.py  urls.py  views.py
django_simple_stripe/: asgi.py  settings.py  urls.py  wsgi.py
stripe_customers/: admin.py  apps.py  models.py
stripe_customers/migrations/: 0001_initial.py  0002_stripecustomer_idempotency_key_and_more.py
templates/: base.html
templates/checkouts/: cancel.html  checkout-custom.html  checkout-embedded.html  checkout-hosted.html  return.html  success.html
templates/static/css/checkouts/: checkout-custom.css  checkout.css
templates/static/js/: checkout-embedded.js  checkout.js  interfaces.js  stripe-payment-handlers.js  utils.js
tests/integration/stripe_customers/: test_models.py
tests/unit/addresses/: test_models.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
utils/: support.py
